--- a/ipynb/01_CourseInfo.ipynb
+++ b/ipynb/01_CourseInfo.ipynb
@@ -72,18 +72,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Il materiale sarà presentato in notebooks che dovranno essere scaricati e studiati **prima** delle lezioni\n",
-    "- Le lezioni verranno utilizzate per mettere in pratica i concetti appresi dai notebook attraverso esercizi, approfondimenti, attività di gruppo\n",
+    "- Il materiale sar&agrave; presentato in notebooks che dovranno essere scaricati e studiati **prima** delle lezioni\n",
+    "- Le lezioni verranno utilizzate per mettere in pratica i concetti appresi dai notebook attraverso esercizi, approfondimenti, attivit&agrave; di gruppo\n",
     "- Durante le lezioni saranno presenti dei tutor per rispondere alle vostre domande\n",
-    "- I notebook sono disponibili e scaricabili sul mio sito: http://www.to.infn.it/~maina/didattica/TIF_2025 in formato html (sola lettura) e in formato ipynb (eseguibile). Si può scaricare l'intero tree da  https://github.com/mainaezio/TIF_2025_Introduction_to_Python.git."
+    "- Si può scaricare tutto il materiale didattico da  https://github.com/mainaezio/TIF_2025_Introduction_to_Python.git.\n",
+    "- Scaricate i file in una nuova directory nella vostra `home`\n",
+    "- Potrebbe essere utile crearne una seconda copia in una cartella indipendente da usare come area di lavoro.\n",
+    "- **I notebook sono strumenti interattivi non appunti da leggere. I comandi vanno eseguiti, modificati e compresi.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Valutazione\n",
-    "-----------\n",
+    "## Valutazione\n",
     "\n",
     "- Il corso non ha voto finale. Approvato/Non approvato\n",
     "- Alla fine di alcune sessioni in laboratorio una prova con alcuni esercizi. Valutati.\n",
@@ -118,13 +120,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Metodo di apprendimento\n",
-    "-----------------------\n",
+    "## Metodo di apprendimento\n",
     "\n",
     "- Non potete imparare a programmare mandando a memoria\n",
     "- Imparate solo facendo. Fare significa sedersi al computer, battere i comandi e, provando e riprovando, farli funzionare, ottenendo il risultato corretto\n",
     "- 1 CFU equivale a 25 ore di impegno per lo studente di cui solo 8 sono di lezione.\n",
-    "- Molte delle abilità che svilupperete nello scrivere programmi, la capacità di analizzare un problema e di spezzarlo in elementi semplici, l'attenzione a tutti i dettagli, la capacità di rendersi conto se il risultato ottenuto è sensato e la capacità di trovare dove si è sbagliato se non lo è, sono le abilità necessarie per comprendere e risolvere qualsiasi problema fisico"
+    "- Molte delle abilit&agrave; che svilupperete nello scrivere programmi, la capacit&agrave; di analizzare un problema e di spezzarlo in elementi semplici, l'attenzione a tutti i dettagli, la capacit&agrave; di rendersi conto e verificare se il risultato ottenuto &egrave; sensato e corretto, la capacit&agrave; di trovare dove si &egrave; eventualmente sbagliato, sono le abilit&agrave; necessarie per comprendere e risolvere qualsiasi problema fisico"
    ]
   },
   {
@@ -140,8 +141,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- La partecipazione attiva durante le lezioni è molto apprezzata\n",
-    "- La collaborazione durante i laboratori, con l'eccezione del periodo d'esame, è fortemente incoraggiata\n",
+    "- La partecipazione attiva durante le lezioni &egrave; molto apprezzata\n",
+    "- La collaborazione durante i laboratori, con l'eccezione del periodo d'esame, &egrave; fortemente incoraggiata\n",
     "- Becoming fluent in technical English is a must "
    ]
   },
@@ -160,7 +161,7 @@
    "source": [
     "### Informazioni pratiche\n",
     "\n",
-    "- Il mio indirizzo email è <maina@to.infn.it>\n",
+    "- Il mio indirizzo email &egrave; <maina@to.infn.it>\n",
     "- Registatevi al corso appena possibile sulla [pagina Campusnet del corso](https://fisica.campusnet.unito.it/do/corsi.pl/Show?_id=c6ay)\n",
     "in modo che io possa raggiungervi via mail per eventuali comunicazioni.\n"
    ]
@@ -171,7 +172,7 @@
    "source": [
     "### Strumenti bibliografici addizionali\n",
     "\n",
-    "Il materiale su Python sul web è talmente abbondante che diventa difficile raccapezzarsi. Non tutte le informazioni sono aggiornate.<br/>\n",
+    "Il materiale su Python sul web &egrave; talmente abbondante che diventa difficile raccapezzarsi. Non tutte le informazioni sono aggiornate.<br/>\n",
     "Qualche suggerimento:<BR>\n",
     "    \n",
     "Tutorial di Python:<BR>\n",
@@ -212,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
