--- a/ipynb/07_numpy.ipynb
+++ b/ipynb/07_numpy.ipynb
@@ -79,17 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "x = np.array([0, 0.5, 1, 1.5])\n",
@@ -1795,7 +1787,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ordinare gli elementi di una matrice"
+    "#### Operazioni su matrici lunga una singola direzione, il parametro `axis`\n",
+    "\n",
+    "Talvolta &egrave; necessario operare su una matrice, o pi&ugrave; in generale su un array a molte componenti, lungo una specifica direzione.\n",
+    "Il parametro che controlla questo comportamento &egrave; `axis` che &egrave; un numero intero che inizia da zero. In una matrice `axis=0` si riferisce alla direzione che corre lungo le righe, `axis=1` alla direzione che corre lungo le colonne."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style= 'padding:20px 20px 0px 150px;'>\n",
+    "    <img src=\"../Images/numpy-arrays-have-axes_updated_v2.png\" width=\"500\" align=\"center\"/>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una operazione con `axis=0` agisce nella direzione lungo le righe, cio&egrave; coinvolge le colonne.<BR>\n",
+    "Come primo esempio mostriamo come ordinare righe e colonne di una matrice.<BR>\n",
+    "Data la matrice `X`:"
    ]
   },
   {
@@ -1815,7 +1828,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ordinare le colonne:"
+    "Per ordinare le colonne si usa `sort` con `axis=0`:"
    ]
   },
   {
@@ -1831,7 +1844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ordinare le righe:"
+    "Per ordinare le righe si usa `sort` con `axis=1`:"
    ]
   },
   {
@@ -1841,6 +1854,66 @@
    "outputs": [],
    "source": [
     "print(np.sort(X, axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Per sommare lungo righe o colonne:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.sum(X, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.sum(X, axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Per concatenare due matrici si usa `concatenate` che agisce su una lista di array. Date due matrici `X1` e `X2` &egrave; possibile concatenarle in due modi diversi:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X1 = np.array([[1,1,1],[1,1,1]])\n",
+    "X2 = np.array([[2,2,2],[2,2,2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.concatenate([X1,X2], axis=0)) # nella direzione lungo le righe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.concatenate([X1,X2], axis=1)) # nella direzione lungo le colonne"
    ]
   },
   {
@@ -1953,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1964,18 +2037,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a : [ 1  2 22]\n",
-      "b : [ 1  2 22]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('a :', a)\n",
     "print('b :', b)"
@@ -1990,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2001,18 +2065,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a : [ 1  2 22]\n",
-      "b : [ 1  2 22]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('a :', a)\n",
     "print('b :', b)"
