--- a/ipynb/08_plots.ipynb
+++ b/ipynb/08_plots.ipynb
@@ -301,6 +301,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Accortezze per fare un grafico che sia sensato e utile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Plot multipli\n",
     "\n",
     "### Curve multiple in un singolo plot\n",
@@ -636,6 +643,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px\">\n",
+    "    <h4> Imparare Facendo</h4>\n",
+    "    \n",
+    "<OL>\n",
+    "<LI>Fate l'istogramma dell'array a = np.array([22,87,5,43,56,73,55,54,11,20,51,5,79,31,27]). Qual'&egrave; un <b>range</b> ragionevole? Variate il numero di bin fra 1 e 10.\n",
+    "</OL>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Altri elementi dei plot"
    ]
   },
@@ -757,19 +777,6 @@
     "                                                           # il carattere \"\\\" come parte di LaTeX\n",
     "plt.text(1.8, 0.85, r'$\\Gamma(z)=\\int_0^\\infty x^{z-1}e^{-x}dx$', {'color': 'k', 'fontsize': 14})\n",
     "plt.text(4.0, 0.40, r'$\\Gamma(z)=\\int_0^\\infty x^{z-1}e^{-x}dx$', {'color': 'b', 'fontsize': 20})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px\">\n",
-    "    <h4> Imparare Facendo</h4>\n",
-    "    \n",
-    "<OL>\n",
-    "<LI>Fate l'istogramma dell'array a = np.array([22,87,5,43,56,73,55,54,11,20,51,5,79,31,27]). Qual'&egrave; un <b>range</b> ragionevole? Variate il numero di bin fra 1 e 10.\n",
-    "</OL>\n",
-    "</div>"
    ]
   },
   {
