--- a/ipynb/01c_AI.ipynb
+++ b/ipynb/01c_AI.ipynb
@@ -69,7 +69,7 @@
     "Il \"vibe coding\" (programmare a sensazione con l'IA) funziona per:\n",
     "- Task semplici e standardizzati\n",
     "- Prototipi veloci\n",
-    "- Codice boilerplate\n",
+    "- Codice boilerplate (codice che viene ripetuto pi&ugrave; volte all'interno derl programma con piccole variazioni. Necessario ma di basso livello)\n",
     "\n",
     "NON funziona per:\n",
     "- Ricerca originale\n",
