--- a/ipynb/01b_Programma.ipynb
+++ b/ipynb/01b_Programma.ipynb
@@ -86,7 +86,7 @@
     "    - Se $ d \\lt 0$ : non ci sono soluzioni reali.\n",
     "    - Se $  d = 0$ : c'&egrave; una soluzione $x_1 = -b/(2a)$.\n",
     "    - Se $  d \\gt 0$ : ci sono due soluzioni reali $x_{1,2} = (-b\\pm\\sqrt{d})/(2a)$.<BR>\n",
-    "    Le possiamo calcolare entrambi utilizzando il volore di $ d $ che si trova in memoria.\n",
+    "    Le possiamo calcolare entrambi utilizzando il valore di $ d $ che si trova in memoria.\n",
     "    "
    ]
   },
