--- a/ipynb/02a_Esercizi.ipynb
+++ b/ipynb/02a_Esercizi.ipynb
@@ -141,7 +141,7 @@
     "__2 - Assegnate alla variabile `pippo` il valore 6.2.__<BR>\n",
     "__Calcolate:__\n",
     "- __Il quadrato di `pippo`.__\n",
-    "- __L'esponenziale di -`pippo`.__\n",
+    "- __L'esponenziale di `-pippo`.__\n",
     "- __La radice terza di `pippo` alla quarta potenza.__\n",
     "- __L'inverso di `pippo`.__   \n"
    ]
@@ -170,7 +170,7 @@
    "metadata": {},
    "source": [
     "__4 - <FONT color=\"orange\">Problema concettuale, non &egrave; necessario scrivere il codice per risolverlo.</FONT><BR>\n",
-    "    Supponete di conoscere il seno e il coseno di un angolo alfa. Come si può trovare il valore di alfa? Provate la vostra soluzione per gli angoli $\\pi/3$ e $7\\pi/6$ (perch&egrave; non possono essere seni o coseni di un angolo?).__"
+    "    Supponete di conoscere il seno e il coseno di un angolo alfa. Come si può trovare il valore di alfa? Provate la vostra soluzione per gli angoli $\\pi/3$ e $7\\pi/6$ (perch&egrave; non possono essere seni o coseni di un angolo?). Perch&eucute; non &egrave;  sufficiente avere solamente il seno oppure il coseno?__"
    ]
   },
   {
@@ -633,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
