--- a/ipynb/02a_Esercizi.ipynb
+++ b/ipynb/02a_Esercizi.ipynb
@@ -228,7 +228,7 @@
    "metadata": {},
    "source": [
     "__8 - Dato come input un angolo `alfa`, calcolare il seno e il coseno di 2\\*alfa usando le formule di duplicazione.\n",
-    "Calcolare la differenza relativa fra il risultato ottenuto e quello che si ottiene calcolando direttamente sin(2\\*alfa) e cos(2\\*alfa).__"
+    "Calcolare la differenza relativa fra il risultato ottenuto e quello che si ottiene calcolando direttamente sin(2\\*alfa) e cos(2\\*alfa) per alcuni angoli a vostra scelta.__"
    ]
   },
   {
@@ -427,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__22 - Usate `math.radians` e `math.degrees` per verificare le vostre soluzioni agli esercizi 12 e 13.__"
+    "__22 - Usate `math.radians` e `math.degrees` per verificare le vostre soluzioni agli esercizi 20 e 21.__"
    ]
   },
   {
