--- a/ipynb/03a_Esercizi.ipynb
+++ b/ipynb/03a_Esercizi.ipynb
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__19 - Definiamo \"parole\" come sequenze di caratteri diversi dallo spazio, separate da spazi. Costruite una funzione `last_word(s)` che restituisca l'ultima parola in `s`, cioè la sottostringa che inizia dopo l'ultimo carattere \"spazio\" in `s`. Se la stringa non contiene spazi, la stringa stessa è l'ultima parola.__"
+    "__19 - Definiamo \"parole\" come sequenze di caratteri diversi dallo spazio, separate da spazi. Costruite una funzione `last_word(s)` che restituisca l'ultima parola nella stringa `s`, cioè la sottostringa che inizia dopo l'ultimo carattere \"spazio\" in `s`. Se la stringa non contiene spazi, la stringa stessa è l'ultima parola.__"
    ]
   },
   {
@@ -317,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__21 - Usando `help(str)` esplorate l'uso del metodo count. Utilizzatelo per trovare quante volte il carattere `a` compare in \"Nel mezzo del cammin di nostra vita mi ritrovai in una selva oscura.__"
+    "__21 - Usando `help(str)` esplorate l'uso del metodo count. Utilizzatelo per trovare quante volte il carattere `a` compare in \"Nel mezzo del cammin di nostra vita mi ritrovai in una selva oscura.\"__"
    ]
   },
   {
@@ -522,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__31 - Costruite una nuova ntupla `tuple2` estraendo i valori 44 e 55\n",
+    "__31 - Costruite una nuova ntupla `tuple2` estraendo i valori 44 e 55, usando i loro indici,\n",
     "dalla ntupla tuple1 = (11, 22, 33, 44, 55, 66).__"
    ]
   },
@@ -551,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
