--- a/ipynb/02a_Esercizi.ipynb
+++ b/ipynb/02a_Esercizi.ipynb
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__11 - scrivete una funzione f(n) che, dato un numero intero n minore di 10, calcoli n + nn + nnn (per esempio se n=2 calcoli 2 + 22 + 222).__"
+    "__11 - Scrivete una funzione f(n) che, dato un numero intero n minore di 10, calcoli n + nn + nnn (per esempio se n=2 calcoli 2 + 22 + 222).__"
    ]
   },
   {
