--- a/ipynb/02_Introduzione_a_Python.ipynb
+++ b/ipynb/02_Introduzione_a_Python.ipynb
@@ -1675,7 +1675,7 @@
     "# 2. Preparo input\n",
     "raggio = 5\n",
     "\n",
-    "# 3. Chiamo E assegno\n",
+    "# 3. Chiamo e assegno\n",
     "superficie = area_cerchio(raggio)\n",
     "\n",
     "# 4. Uso il risultato\n",
