--- a/ipynb/02a_Esercizi.ipynb
+++ b/ipynb/02a_Esercizi.ipynb
@@ -143,7 +143,7 @@
     "- __Il quadrato di `pippo`.__\n",
     "- __L'esponenziale di `-pippo`.__\n",
     "- __La radice terza di `pippo` alla quarta potenza.__\n",
-    "- __L'inverso di `pippo`.__   \n"
+    "- __Il reciproco di `pippo`.__   \n"
    ]
   },
   {
@@ -161,8 +161,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
