--- a/ipynb/03_Tipi_di_Dati.ipynb
+++ b/ipynb/03_Tipi_di_Dati.ipynb
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numeri reali in notazione scientifica: $1.3\\, 10^{-4}$ si scrive 1.3e-4."
+    "Numeri reali in notazione scientifica: $1.3\\, 10^{-4}$ si scrive 1.3e-4, $6.02\\, 10^{3}$, si scrive 6.02e+3 oppure, in modo equivalente, 6.02e3."
    ]
   },
   {
