--- a/ipynb/03_Tipi_di_Dati.ipynb
+++ b/ipynb/03_Tipi_di_Dati.ipynb
@@ -269,6 +269,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#ff8c00; margin:20px 0px 10px 10px\">\n",
+    "    Perch&eacute; <B>bj</B> oppure <B>b*j</B> non sarebbero modi accettabili di definire la parte immaginaria di un numero complesso\n",
+    "    usando la variabile <B>b</B>?\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Per eseguire operazioni più complicate (come fare radici quadrate di numeri complessi etc) è nessario usare il modulo `cmath` (Complex MATHematics):"
    ]
   },
