--- a/ipynb/03_Tipi_di_Dati.ipynb
+++ b/ipynb/03_Tipi_di_Dati.ipynb
@@ -248,7 +248,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "Se si utilizza una variabile per la parte immaginaria, la notazione per costruire un numero complesso è: "
    ]
@@ -267,7 +273,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#ff8c00; margin:20px 0px 10px 10px\">\n",
     "    Perch&eacute; <B>bj</B> oppure <B>b*j</B> non sarebbero modi accettabili di definire la parte immaginaria di un numero complesso\n",
