--- a/ipynb/05_input-output-files.ipynb
+++ b/ipynb/05_input-output-files.ipynb
@@ -288,7 +288,7 @@
    "metadata": {},
    "source": [
     "Quando &egrave; necessario costruire f-strings che si estendono su pi&ugrave; righe il metodo\n",
-    "pi&ugrave; semplice &egrave; usare `\"\"\"` per delimitare la stringa"
+    "pi&ugrave; semplice &egrave; usare `\"\"\"` (triplo doppio-apice) per delimitare la stringa"
    ]
   },
   {
