--- a/ipynb/anscombe.ipynb
+++ b/ipynb/anscombe.ipynb
@@ -8,11 +8,11 @@
     "# Anscombe's quartet \n",
     "#### (https://matplotlib.org/stable/gallery/specialty_plots/anscombe.html)\n",
     "\n",
-    "`Anscombe's quartet`_ is a group of datasets (x, y) that have the same mean,\n",
+    "`Anscombe's quartet` is a group of datasets (x, y) that have the same mean,\n",
     "standard deviation, and regression line, but which are qualitatively different.\n",
     "\n",
     "It is often used to illustrate the importance of looking at a set of data\n",
-    "graphically and not only relying on basic statistic properties.\n",
+    "graphically and not only relying on basic statistical properties.\n",
     "\n"
    ]
   },
@@ -108,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
