--- a/ipynb/03_Tipi_di_Dati.ipynb
+++ b/ipynb/03_Tipi_di_Dati.ipynb
@@ -2578,7 +2578,7 @@
    "source": [
     "## Dizionari\n",
     "\n",
-    "I dizionari sono anche chiamati “associative arrays” o “hash tables”. I dizionari sono insiemi *unordered* di coppie *key-value*. Le keywords devono essere oggetti immutabili mentre i dizionari sono oggetti mutabili.\n",
+    "I dizionari sono anche chiamati “associative arrays” o “hash tables”. I dizionari sono insiemi *unordered* di coppie *key-value*. Le keywords devono essere oggetti immutabili (e unici) mentre i values possono essere oggetti mutabili.\n",
     "\n",
     "Un dizionario vuoto può essere creato usando parentesi graffe (curly braces):"
    ]
