--- a/ipynb/03_Tipi_di_Dati.ipynb
+++ b/ipynb/03_Tipi_di_Dati.ipynb
@@ -2594,10 +2594,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Coppie keyword-value possono essere aggiunti come segue:"
+    "Coppie keyword-value possono essere aggiunti, a un dizionario esistente, come segue:"
    ]
   },
   {
