--- a/ipynb/03_Tipi_di_Dati.ipynb
+++ b/ipynb/03_Tipi_di_Dati.ipynb
@@ -23,7 +23,7 @@
     "        <LI> Le ntuple\n",
     "    </UL>\n",
     "    <LI> Come utilizzare gli indici.\n",
-    "    <LI> Come estrerre sezioni di sequenze\n",
+    "    <LI> Come estrarre sezioni di sequenze\n",
     "    <LI> Cosa sono i dizionari di Python\n",
     "    <LI> Come convertire un tipo in un altro\n",
     "    <LI> Come le variabili vengono immagazzinate in memoria. Tipi mutabili e immutabili.\n",
@@ -2938,7 +2938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2976,6 +2976,46 @@
    "outputs": [],
    "source": [
     "nazioni['Germania']['popolazione']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Per inserire una nuova coppia chiave-valore nel dizionario interno si utilizza lo stesso tipo di indirizzamento:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nazioni['Germania']['superficie'] = '357596 Kmq'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Francia': {'capitale': 'Parigi', 'popolazione': 67390000.0},\n",
+       " 'Germania': {'capitale': 'Berlino',\n",
+       "  'popolazione': 83240000.0,\n",
+       "  'superficie': '357596 Kmq'}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nazioni"
    ]
   },
   {
