--- a/ipynb/04_control-flow.ipynb
+++ b/ipynb/04_control-flow.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<div style = \"width:95%; padding:5px 10px 5px;  margin:50px 0px 10px 10px; font-size:18px\">\n",
     "<UL>\n",
-    "    <LI> Come prendere decisioni in un programma: <strong>if - (then) - else</strong>\n",
+    "    <LI> Come prendere decisioni in un programma: <strong>if - (elif) - (else)</strong>\n",
     "    <LI> Come operare su sequenze: <strong>for</strong> e <strong>while</strong> loop\n",
     "    <LI> Come interrompere un loop    \n",
     "    <LI> Come usare <strong>if</strong> per selezionare all'interno di sequenze\n",
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## If-then-else\n",
+    "## if-elif-else\n",
     "\n",
     "La costruzione `if` permette di eseguire del codice in modo condizionato. Dopo la parola chiave `if` deve essere presente una *condizione* seguita da due punti (`:`). Nella riga successiva inizia un blocco di comandi, che deve essere indentato, che viene eseguito se la condizione è soddisfatta (`True`). Il blocco di comandi termina quando finisce l'indentazione."
    ]
