--- a/ipynb/06_funzioni_moduli.ipynb
+++ b/ipynb/06_funzioni_moduli.ipynb
@@ -57,6 +57,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "L'istruzione `return` è l'ultima istruzione eseguita dalla funzione. Qualunque istruzione nella funzione, dopo il `return` viene ignorata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_f(string):\n",
+    "    print(string)\n",
+    "    return\n",
+    "    print(string*2)        # questa istruzione è indentata di quattro spazi e viene considerata parte di my_f\n",
+    "                           # ma non viene mai eseguita"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pippo\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_f('pippo')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Per funzioni definite dall'utente (classi, tipi, moduli, …), dovrebbe sempre essere presente una docstring sintetica ma esauriente. Sei mesi dopo aver scritto un pezzo di codice, anche l'autore ha difficoltà a comprenderlo senza un buon apparato di commenti. \"Se non l'hai documentato, non l'hai fatto\": severo ma giusto.\n",
     "\n",
     "Come documentare una funzione definita dall'utente:"
