--- a/ipynb/05_input-output-files.ipynb
+++ b/ipynb/05_input-output-files.ipynb
@@ -260,7 +260,7 @@
    },
    "outputs": [],
    "source": [
-    "AU_f5_4 = f\"**{AU:5.4f}**\"     # Stile float larghezza minima di 30 caratteri \n",
+    "AU_f5_4 = f\"**{AU:5.4f}**\"       # Stile float larghezza minima di 5 caratteri \n",
     "                                 # con quattro cifre dopo il punto.\n",
     "                                 # I caratteri * servono a rendere visibile lo spazio riservato\n",
     "print(AU_f5_4)"
@@ -322,8 +322,7 @@
     "print(f\"{info[0]:>8s} {info[1]:>8s} {info[2]:>8s}\")\n",
     "print(30*'-')\n",
     "for i in range(len(Table)):\n",
-    "    print(f\"{Table[i][0]:8d} {Table[i][1]:8d} {Table[i][2]:8d}\") \n",
-    "#    print(f\"{Table[i][0]:i8} {Table[i][1]:i8} {Table[i][2]:i8}\") "
+    "    print(f\"{Table[i][0]:8d} {Table[i][1]:8d} {Table[i][2]:8d}\") \n"
    ]
   },
   {
@@ -335,23 +334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------\n",
-      "|   dato 1 |   dato 2 |   dato 3 |\n",
-      "----------------------------------\n",
-      "|        1 |        2 |        3 |\n",
-      "|        5 |        6 |        7 |\n",
-      "|        8 |        9 |       10 |\n",
-      "----------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Table = [[1, 2, 3], [5, 6, 7], [8, 9, 10]]\n",
     "info = [\"dato 1\", \"dato 2\", \"dato 3\"]\n",
@@ -385,8 +370,7 @@
     "print(34*'-')\n",
     "for i in range(len(Table)):\n",
     "    print(f\"| {Table[i][0]:^8d} | {Table[i][1]:<8d} | {Table[i][2]:8d} |\") \n",
-    "print(34*'-')\n",
-    "#    print(f\"{Table[i][0]:i8} {Table[i][1]:i8} {Table[i][2]:i8}\") "
+    "print(34*'-')"
    ]
   },
   {
@@ -407,8 +391,7 @@
     "print(f\"{info[0]:>12s} {info[1]:>12s} {info[1]:>12s}\")\n",
     "print(42*'-')\n",
     "for i in range(len(Table)):\n",
-    "    print(f\"{Table[i][0]:12.2f} {Table[i][1]:12.2f} {Table[i][2]:12.2f}\") \n",
-    "#    print(f\"{Table[i][0]:i8} {Table[i][1]:i8} {Table[i][2]:i8}\") "
+    "    print(f\"{Table[i][0]:12.2f} {Table[i][1]:12.2f} {Table[i][2]:12.2f}\") \n"
    ]
   },
   {
@@ -687,24 +670,6 @@
    "source": [
     "f3 = open('myfile3.txt', 'w')\n",
     "f3.write('This is the first line.\\n','This is the second line.\\n','This is the third and last line.')\n",
-    "f3.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Un metodo corretto &egrave;, per esempio:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f3 = open('myfile3.txt', 'w')\n",
-    "f3.write('This is the first line.\\n'+'This is the second line.\\n'+'This is the third and last line.')\n",
     "f3.close()"
    ]
   },
