--- a/ipynb/05_input-output-files.ipynb
+++ b/ipynb/05_input-output-files.ipynb
@@ -731,7 +731,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Questo metodo viene spesso utilizzato per iterare sulle linee, compiendo delle operzioni su ciascuna linea. Per esempio:"
+    "Questo metodo viene spesso utilizzato per iterare sulle linee, compiendo delle operazioni su ciascuna linea. Per esempio:"
    ]
   },
   {
