--- a/ipynb/06_funzioni_moduli.ipynb
+++ b/ipynb/06_funzioni_moduli.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,17 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pippo\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_f('pippo')"
    ]
@@ -425,12 +417,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definire una funzione con *args\n",
     "def show_countries(*args):\n",
+    "    # args è una ntupla\n",
     "    print(f\"The args type: {type(args)}\")\n",
     "    for item in args:\n",
     "        print(item)"
@@ -438,9 +431,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The args type: <class 'tuple'>\n",
+      "America\n",
+      "Canada\n"
+     ]
+    }
+   ],
    "source": [
     "# Chiamata alla funzione con due argomenti\n",
     "show_countries('America', 'Canada')"
