--- a/ipynb/07_numpy.ipynb
+++ b/ipynb/07_numpy.ipynb
@@ -150,7 +150,7 @@
    "source": [
     "#### Aggiungere, inserire, eliminare elementi di un array\n",
     "\n",
-    "`Numpy` ha i metodi `np.append`, `np.insert`, `np.delete` che permettono di modificare il numero di elementi di un `array`. Tutti questi metodi per&ograve; non agiscono `in-place` ma creano e ritornano un nuovo `array`, quindi sono computazionalmente costosi. Per questa ragione &egrave; preferibile creare un `array` con metodi come `zeroes` e `ones` e poi modificare i valori. "
+    "`Numpy` ha i metodi `np.append`, `np.insert`, `np.delete` che permettono di modificare il numero di elementi di un `array`. Tutti questi metodi per&ograve; non agiscono `in-place` ma creano e ritornano un nuovo `array`, quindi sono computazionalmente costosi. Per questa ragione &egrave; preferibile creare un `array` con metodi come `zeroes` e `ones` e poi, eventualmente, modificarne i valori. "
    ]
   },
   {
@@ -196,6 +196,44 @@
    "source": [
     "print(np.logspace(1, 4, 4))\n",
     "#np.logspace(1.7, 4.4, 40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verifichiamo che ilogaritmi degli elementi generati da `logspace` sono effettivamente equidistanti:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "a = np.logspace(1, 4, 4)\n",
+    "print(a)\n",
+    "al = np.log(a)\n",
+    "print(al)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Costruiamo la differenza fra elementi successivi di `al`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(al[1:])\n",
+    "print(al[:-1])\n",
+    "print(al[1:]-al[:-1])"
    ]
   },
   {
@@ -1102,7 +1140,7 @@
     "\n",
     "\n",
     "def numpymethod(N):\n",
-    "    a3 = np.sum(np.arange(0, N)**2, dtype='d')  # dtype = 'd' vuol dire double precision\n",
+    "    a3 = np.sum(np.arange(0, N)**2, dtype='float64')  # dtype = 'float64' vuol dire double precision\n",
     "    return a3\n"
    ]
   },
@@ -1154,7 +1192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-  Usare il metodo  <span>`zeros`</span> (<span>`ones`</span>) per creare una matrice di zeri (uno). Un esempio con 5 righe e 4 colonne:"
+    "-  Usare il metodo  <span>`zeros`</span> (<span>`ones`</span>) per creare una matrice di zeri (uno). Un esempio per creare una matrice con 5 righe e 4 colonne:"
    ]
   },
   {
