--- a/ipynb/07_numpy.ipynb
+++ b/ipynb/07_numpy.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Verifichiamo che ilogaritmi degli elementi generati da `logspace` sono effettivamente equidistanti:"
+    "Verifichiamo che i logaritmi degli elementi generati da `logspace` sono effettivamente equidistanti:"
    ]
   },
   {
@@ -462,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nel modulo numpy sono definite tutte le funzioni matematiche pi&ugrave; comuni in modo che agiscano su tutti gli elementi di un array. Sono definite anche le costanti come np.e e np.pi. In generale &egrave; superfluo importare separatamente il modulo math."
+    "Nel modulo numpy sono definite tutte le funzioni matematiche pi&ugrave; comuni in modo che agiscano su tutti gli elementi di un array. Sono definite anche le costanti come np.e e np.pi. In generale &egrave; superfluo e sconsigliato importare separatamente il modulo math."
    ]
   },
   {
@@ -807,7 +807,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+    "arr = np.array([0, 11, 12, 33, 44, 55, 66, 77, 88, 99])\n",
     "\n",
     "arr[arr % 2 == 1] = -1\n",
     "print(arr)"
@@ -878,8 +878,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
-    "print(np.where( (arr>=1) & (arr<+7) ))"
+    "arr = np.array([0, 11, 12, 33, 44, 55, 66, 77, 88, 99])\n",
+    "print(np.where( (arr>=1) & (arr<=7) ))"
    ]
   },
   {
@@ -902,7 +902,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = np.where(np.logical_and(arr>=5, arr<=10))\n",
+    "index = np.where(np.logical_and(arr>=55, arr<100))\n",
     "print(arr[index])"
    ]
   },
@@ -2138,41 +2138,6 @@
    "source": [
     "print('a :', a)\n",
     "print('b :', b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Array multidimensionali\n",
-    "Le funzioni di numpy possono operare su array multidimensionali. &Egrave; quindi necessario poter controllare come la funzione agisce sull'array. Un caso tipico &egrave; far operare la funzione lungo un singolo asse (axis) dell'array. Un semplice esempio usando la funzione `sum`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(np.sum([[0, 1], [3, 5]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(np.sum([[0, 1], [3, 5]], axis=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(np.sum([[0, 1], [3, 5]], axis=1))"
    ]
   },
   {
