--- a/ipynb/08_plots.ipynb
+++ b/ipynb/08_plots.ipynb
@@ -308,6 +308,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Scegliere il range appropriato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def f1(x):\n",
+    "    return (x**2 - 5*x -2)*np.exp(-x**2)\n",
+    "\n",
+    "xval = np.linspace(10.,25.,151)\n",
+    "yval = f1(xval)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 5))\n",
+    "ax.set_xlim(10., 25.)\n",
+    "\n",
+    "ax.plot(xval, yval);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Utilizzate un numero appropriato di punti"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f2(x):\n",
+    "    return np.sin(x**2)/(1. + x**2)\n",
+    "\n",
+    "xval = np.linspace(0.,5.,21)\n",
+    "yval = f2(xval)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 5))\n",
+    "\n",
+    "ax.plot(xval, yval);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f3(x):\n",
+    "    return x*np.cos(x**2)/(1. - x**2)\n",
+    "\n",
+    "xval = np.linspace(-np.pi,np.pi,21)\n",
+    "yval = f3(xval)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 5))\n",
+    "\n",
+    "ax.plot(xval, yval);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Plot multipli\n",
     "\n",
     "### Curve multiple in un singolo plot\n",
