--- a/ipynb/07_numpy.ipynb
+++ b/ipynb/07_numpy.ipynb
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "print(x)     # usa il metodo object.str()\n",
-    "x            # usa il metodo object.repr() che pu&ograve; non coincidere con object.str()"
+    "x            # usa il metodo object.repr() che può non coincidere con object.str()"
    ]
   },
   {
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,9 +1146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75.7 ms ± 254 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "1.74 ms ± 60.7 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "N = 1000000\n",
     "\n",
@@ -1590,11 +1599,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3. -2.]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy.linalg as LA\n",
+    "A = np.array([[1,2],[3,4]])\n",
+    "b = np.array([-1,1])\n",
     "x = LA.solve(A, b)\n",
     "print(x)"
    ]
@@ -1608,9 +1627,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.  1.]\n",
+      "[-1  1]\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.dot(A, x))\n",
     "print(b)"
