--- a/ipynb/07_numpy.ipynb
+++ b/ipynb/07_numpy.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "## Numpy e gli array\n",
     "\n",
-    "La librery NumPy (NUMerical PYthon) fornisce un nuovo tipo di struttura dei dati chiamata `array`s che permette di eseguire in modo efficiente operazioni su vettori e matrici. Fornisce inoltre diverse  operazioni legate all'algebra lineare (come risolvere sistemi di equazioni lineari, calcolo di autovettori e autovalori). Viene tradizionalmente importata come `np`.<BR>\n",
+    "La librery NumPy (NUMerical PYthon) fornisce un nuovo tipo di struttura dei dati chiamata `array`s che permette di eseguire in modo efficiente operazioni su vettori e matrici. Fornisce le  operazioni legate all'algebra lineare (come risolvere sistemi di equazioni lineari, calcolo di autovettori e autovalori). Fornisce le rotine per la generazione di numeri casuali. Viene tradizionalmente importata come `np`.<BR>\n",
     "\n",
     "Un Numpy array *sembra* molto simile a una lista ma pu&ograve; contenere solo elementi di un singolo tipo (mentre una lista pu&ograve; contenere oggetti di tipo diverso). Questo significa che gli array possono essere scritti in memoria in modo pi&ugrave; efficiente. Gli array sono la struttura di dati migliore per i calcoli numerici in cui spesso si ha a che fare con vettori e matrici di tipo omogeneo.\n",
     "\n",
@@ -112,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Creazione di un vettore usando \"arange\":"
+    "- Creazione di un vettore usando \"arange\" (usando numeri reali per gli estremi e il passo):"
    ]
   },
   {
@@ -334,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(x[0])\n",
+    "print(x[1:3])\n",
     "print(x[0:-1])"
    ]
   },
@@ -2416,10 +2416,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "2. **Sezione su broadcasting**: Manca una spiegazione del broadcasting, concetto fondamentale per capire come NumPy gestisce operazioni tra array di dimensioni diverse.\n",
-    "\n",
-    "\n",
     "# Sommario 7: NumPy - La Matematica Vettorizzata\n",
     "\n",
     "## 🎯 Il Concetto Fondamentale\n",
