--- a/ipynb/08_plots.ipynb
+++ b/ipynb/08_plots.ipynb
@@ -636,7 +636,7 @@
    "source": [
     "## Istogrammi\n",
     "\n",
-    "I dati sono raggruppati in bin (contenitori, bidoni). L'altezza di ciascun bin corrisponde al numero di dati che cadono fra i due valori della variabile che definiscono la base del bin. Cambiando il numero di bin e/o i loro estremi si cambia il plot."
+    "I dati sono raggruppati in in intervalli o bin (contenitori, bidoni) che ricoprono il range di possibili valori della variabile che si sta studiando. L'altezza di ciascun bin &egrave; proporzionale al numero di dati che cadono fra i due valori della variabile che definiscono la base del bin. Cambiando il numero di bin e/o i loro estremi si cambia il plot."
    ]
   },
   {
