--- a/ipynb/09_numpy_statistics.ipynb
+++ b/ipynb/09_numpy_statistics.ipynb
@@ -228,7 +228,7 @@
    "source": [
     "## Istogramma delle frequenze\n",
     "\n",
-    "L'istogramma delle frequenze &egrave; sovente il modo migliore per un primo esame dei dati"
+    "L'istogramma delle frequenze &egrave; sovente il modo migliore per un primo esame dei dati, mostrando con quale frequenza i valori in un dato intervallo o bin appaiono nei dati."
    ]
   },
   {
