--- a/ipynb/10_scipy.ipynb
+++ b/ipynb/10_scipy.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un esempio di routine che integra una funzione usando il metodo dei trapezi:"
+    "Una routine elementare che illustra l'algoritmo per integrare  una funzione usando il metodo dei trapezi:"
    ]
   },
   {
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'input di `trapezoid` sono l'array delle coordinate `y` e quello delle coordinate `x` nell'ordine."
+    "L'input di `trapezoid` sono l'array delle coordinate `y` e quello delle corrispondenti coordinate `x` nell'ordine."
    ]
   },
   {
@@ -513,11 +513,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-0.3151388005039044)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def my_f(x):\n",
     "    return np.sin(x)/(x-1.)\n",
@@ -538,11 +549,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2.737381134298694)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = np.linspace(0.5, 2., 237)\n",
     "y = my_f(x)\n",
@@ -661,7 +683,7 @@
    "source": [
     "### Soluzione con il metodo di Eulero\n",
     "\n",
-    "Un esempio di routine che risolve un'equazione differenziale in una variabile usando il metodo di Eulero:"
+    "Una routine elementare che illustra il metodo di Eulero per risolvere un'equazione differenziale in una variabile:"
    ]
   },
   {
@@ -725,7 +747,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il comando `odeint` pu&ograve; prendere diversi parametri opzionali per modificare l'errore di default nell'integrazione (e per produrre output addizionale che pu&ograve; essere utile per il debugging). Usate il comando help per farvene un'idea:"
+    "SciPy fornisce la funzione `odeint` pu&ograve; che &egrave; molto pi&ugrave; affidabile e permette un controllo pi&ugrave; dettagliato del procedimento utilizzamdo i parametri opzionali per modificare l'errore di default nell'integrazione (e per produrre output addizionale che pu&ograve; essere utile per il debugging). Usate il comando help per farvene un'idea:"
    ]
   },
   {
